--- a/FitPass/WebContent/index.html
+++ b/FitPass/WebContent/index.html
@@ -3,9 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
+<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="bootstrap/js/bootstrap.bundle.min.js"></script>
 <title>Početna stranica</title>
 </head>
-<body>
+<body class="text-bg-dark">
 	<p>Ovo je početna stranica aplikacije FitPass.</p>
 </body>
 </html>
