--- a/FitPass/WebContent/login.html
+++ b/FitPass/WebContent/login.html
@@ -7,11 +7,12 @@
 <link rel="stylesheet" type="text/css" href="css/login.css">
 <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
 <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="bootstrap/js/bootstrap.bundle.min.js"></script>
 <script type="text/javascript" src="js/login.js"></script>
 <title>Prijava korisnika</title>
 </head>
-<body>
-	<div class="container">
+<body class="text-bg-dark">
+	<div class="container d-flex max-vw-50 min-vh-100">
 		<form role="form" id="loginForm">
 			<div class="form-group">
 				<label for="usernameInput">Korisničko ime:</label>
@@ -21,9 +22,11 @@
 				<label for="passwordInput">Lozinka:</label>
 				<input type="password" class="form-control" id="passwordInput">
 			</div>
-			<button type="submit" class="btn btn-default">Prijava</button>
-			<p class="help-block" id="loginError" hidden="true"></p>
-			<p class="help-block" id="loginSuccess" hidden="true"></p>
+			<div class="submitButtonDiv">
+				<button type="submit" class="btn-default bg-primary text-white">Prijava</button>
+			</div>
+			<p id="loginError" hidden="true"></p>
+			<p id="loginSuccess" hidden="true"></p>
 		</form>
 	</div>
 </body>
