--- a/FitPass/WebContent/login.html
+++ b/FitPass/WebContent/login.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="css/login.css">
-<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
-<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="bootstrap/js/bootstrap.bundle.min.js"></script>
-<script type="text/javascript" src="js/login.js"></script>
-<title>Prijava korisnika</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/login.css">
+	<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+	<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="bootstrap/js/bootstrap.bundle.min.js"></script>
+	<script type="text/javascript" src="js/login.js"></script>
+	<title>Prijava korisnika</title>
 </head>
 <body class="text-bg-dark">
 	<div class="container d-flex max-vw-50 min-vh-100">
@@ -25,8 +25,8 @@
 			<div class="submitButtonDiv">
 				<button type="submit" class="btn-default bg-primary text-white">Prijava</button>
 			</div>
-			<p id="loginError" hidden="true"></p>
-			<p id="loginSuccess" hidden="true"></p>
+			<p id="loginSuccess" hidden>Tekst uspeha.</p>
+			<p id="loginError" hidden>Tekst greške.</p>
 		</form>
 	</div>
 </body>
