--- a/FitPass/WebContent/registration.html
+++ b/FitPass/WebContent/registration.html
@@ -20,7 +20,7 @@
 			</div>
 			<div class="form-group">
 				<label for="passwordInput">Lozinka:</label>
-				<input type="text" class="form-control" id="passwordInput">
+				<input type="password" class="form-control" id="passwordInput">
 			</div>
 			<div class="form-group">
 				<label for="firstNameInput">Ime:</label>
