feat: write venue service

--- a/FitPass/WebContent/index.html
+++ b/FitPass/WebContent/index.html
@@ -4,12 +4,14 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/index.css">
 	<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
 	<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="bootstrap/js/bootstrap.bundle.min.js"></script>
+	<script type="text/javascript" src="js/index.js"></script>
 	<title>Početna stranica</title>
 </head>
 <body class="text-bg-dark">
-	<p>Ovo je početna stranica aplikacije FitPass.</p>
+	<div class="container d-flex max-vw-50 min-vh-100"></div>
 </body>
 </html>
