feat: show retrieved venues on home page
I used jQuery to dynamically fill rows and cells of venues table. So far, I also retrieved venue's type and location from respective services on backend.

--- a/FitPass/WebContent/index.html
+++ b/FitPass/WebContent/index.html
@@ -12,6 +12,33 @@
 	<title>Početna stranica</title>
 </head>
 <body class="text-bg-dark">
-	<div class="container d-flex max-vw-50 min-vh-100"></div>
+	<div class="container d-flex min-vw-80 min-vh-100">
+		<table class="table table-light table-bordered border-primary" id="venuesTable">
+			<thead>
+				<tr>
+					<th scope="col">#</th>
+					<th scope="col">Naziv</th>
+					<th scope="col">Tip</th>
+					<th scope="col">Status</th>
+					<th scope="col">Lokacija</th>
+					<th scope="col">Logo</th>
+					<th scope="col">Prosečna ocena objekta</th>
+					<th scope="col">Radno vreme</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<th scope="row">0</th>
+					<td>Neki naziv</td>
+					<td>Neki tip</td>
+					<td>Neki status</td>
+					<td>Neka lokacija</td>
+					<td>Neki logo</td>
+					<td>Neka prosečna ocena objekta</td>
+					<td>Neko radno vreme</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
 </body>
 </html>
