--- a/FitPass/WebContent/index.html
+++ b/FitPass/WebContent/index.html
@@ -13,7 +13,7 @@
 </head>
 <body class="text-bg-dark">
 	<div class="container d-flex min-vw-80 min-vh-100">
-		<table class="table table-light table-bordered border-primary" id="venuesTable">
+		<table class="table table-dark table-bordered border-primary" id="venuesTable">
 			<thead>
 				<tr>
 					<th scope="col">#</th>
@@ -33,7 +33,9 @@
 					<td>Neki tip</td>
 					<td>Neki status</td>
 					<td>Neka lokacija</td>
-					<td>Neki logo</td>
+					<td class="logoTableData">
+						<img class="img-fluid rounded mx-auto d-block" src="storage/images/logos/Bazeni_Milan_Gale_Muskatirovic_logo.png" alt="logo">
+					</td>
 					<td>Neka prosečna ocena objekta</td>
 					<td>Neko radno vreme</td>
 				</tr>
