--- a/FitPass/WebContent/index.html
+++ b/FitPass/WebContent/index.html
@@ -12,6 +12,26 @@
 	<title>Početna stranica</title>
 </head>
 <body class="text-bg-dark">
+	<nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+		<div class="container-fluid">
+			<a class="navbar-brand" href="#">FitPass</a>
+			<button type="button" class="navbar-toggler" data-bs-toggle="collapse" 
+				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" 
+				aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="#">Početna stranica</a>
+					</li>
+				</ul>
+				<button type="button" class="btn bg-dark text-white" id="registrationAsABuyerButton" hidden="true">Registruj se</button>
+				<button type="button" class="btn bg-dark text-white" id="loginButton" hidden="true">Prijavi se</button>
+				<button type="button" class="btn bg-dark text-white" id="logoutButton" hidden="true">Odjavi se</button>
+			</div>
+		</div>
+	</nav>
 	<div class="container d-flex min-vw-80 min-vh-100">
 		<table class="table table-dark table-bordered border-primary" id="venuesTable">
 			<thead>
