--- a/FitPass/WebContent/index.html
+++ b/FitPass/WebContent/index.html
@@ -5,9 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
-	<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
 	<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="bootstrap/js/bootstrap.bundle.min.js"></script>
+	<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
 	<script type="text/javascript" src="js/index.js"></script>
 	<title>Početna stranica</title>
 </head>
@@ -26,7 +26,7 @@
 						<a class="nav-link active" aria-current="page" href="#">Početna stranica</a>
 					</li>
 				</ul>
-				<button type="button" class="btn bg-dark text-white" id="registrationAsABuyerButton" hidden="true">Registruj se</button>
+				<button type="button" class="btn bg-dark text-white" id="registrationAsABuyerButton">Registruj se</button>
 				<button type="button" class="btn bg-dark text-white" id="loginButton" hidden="true">Prijavi se</button>
 				<button type="button" class="btn bg-dark text-white" id="logoutButton" hidden="true">Odjavi se</button>
 			</div>
@@ -46,20 +46,7 @@
 					<th scope="col">Radno vreme</th>
 				</tr>
 			</thead>
-			<tbody>
-				<tr>
-					<th scope="row">0</th>
-					<td>Neki naziv</td>
-					<td>Neki tip</td>
-					<td>Neki status</td>
-					<td>Neka lokacija</td>
-					<td class="logoTableData">
-						<img class="img-fluid rounded mx-auto d-block" src="storage/images/logos/Bazeni_Milan_Gale_Muskatirovic_logo.png" alt="logo">
-					</td>
-					<td>Neka prosečna ocena objekta</td>
-					<td>Neko radno vreme</td>
-				</tr>
-			</tbody>
+			<tbody></tbody>
 		</table>
 	</div>
 </body>
