style: show location data as a card
I beautified the venues table using code of examples from Bootstrap documentation. Currently, I am retrieving venue type, location and address using synchronous HTTP requests, which is not recommended.

--- a/FitPass/WebContent/index.html
+++ b/FitPass/WebContent/index.html
@@ -32,9 +32,10 @@
 			</div>
 		</div>
 	</nav>
-	<div class="container d-flex min-vw-80 min-vh-100">
+	<div class="container d-flex flex-column">
+		<h1>Svi objekti:</h1>
 		<table class="table table-dark table-bordered border-primary" id="venuesTable">
-			<thead>
+			<thead class="table-primary table-bordered border-primary">
 				<tr>
 					<th scope="col">#</th>
 					<th scope="col">Naziv</th>
@@ -42,11 +43,32 @@
 					<th scope="col">Status</th>
 					<th scope="col">Lokacija</th>
 					<th scope="col">Logo</th>
-					<th scope="col">Prosečna ocena objekta</th>
+					<th scope="col">Prosečna ocena</th>
 					<th scope="col">Radno vreme</th>
 				</tr>
 			</thead>
-			<tbody></tbody>
+			<tbody>
+				<tr>
+					<th scope="row">0</th>
+					<td class="nameTableData">Sportsko-rekreativni centar "Mihajlo Eriban"</td>
+					<td class="typeTableData">Bazenski kompleks</td>
+					<td class="statusTableData">Ne radi</td>
+					<td class="locationTableData">
+						<div class="card text-center text-white bg-dark border-light">
+							<div class="card-body">
+								<h5 class="card-title">Starca Vujadina 17</h5>
+								<h6 class="card-subtitle mb-2">Inđija 22320</h6>
+								<p class="card-text">44.80202 20.37991</p>
+							</div>
+						</div>
+					</td>
+					<td class="logoTableData">
+						<img class="img-fluid rounded mx-auto d-block" src="storage/images/logos/Bazeni_Milan_Gale_Muskatirovic_logo.png" alt="logo">
+					</td>
+					<td class="averageGradeTableData">8.5</td>
+					<td class="workingHoursTableData">7:30 - 21:00</td>
+				</tr>
+			</tbody>
 		</table>
 	</div>
 </body>
