--- a/FitPass/WebContent/index.html
+++ b/FitPass/WebContent/index.html
@@ -47,28 +47,7 @@
 					<th scope="col">Radno vreme</th>
 				</tr>
 			</thead>
-			<tbody>
-				<tr>
-					<th scope="row">0</th>
-					<td class="nameTableData">Sportsko-rekreativni centar "Mihajlo Eriban"</td>
-					<td class="typeTableData">Bazenski kompleks</td>
-					<td class="statusTableData">Ne radi</td>
-					<td class="locationTableData">
-						<div class="card text-center text-white bg-dark border-light">
-							<div class="card-body">
-								<h5 class="card-title">Starca Vujadina 17</h5>
-								<h6 class="card-subtitle mb-2">Inđija 22320</h6>
-								<p class="card-text">44.80202 20.37991</p>
-							</div>
-						</div>
-					</td>
-					<td class="logoTableData">
-						<img class="img-fluid rounded mx-auto d-block" src="storage/images/logos/Bazeni_Milan_Gale_Muskatirovic_logo.png" alt="logo">
-					</td>
-					<td class="averageGradeTableData">8.5</td>
-					<td class="workingHoursTableData">7:30 - 21:00</td>
-				</tr>
-			</tbody>
+			<tbody></tbody>
 		</table>
 	</div>
 </body>
