refactor: point to html page in same folder

--- a/FitPass/WebContent/registration.html
+++ b/FitPass/WebContent/registration.html
@@ -52,13 +52,13 @@
 			<div class="form-group">
 				<div class="form-check form-check-inline">
 					<input type="radio" class="form-check-input" name="genderInputRadioGroup" 
-							id="maleGenderInput" value="MALE" checked>
-					<label class="form-check-label" for="maleGenderInput">Muški</label>
+						id="maleGenderInput" value="MALE" checked>
+					<label class="form-check-label" for="maleGenderInput">Muški pol</label>
 				</div>
 				<div class="form-check form-check-inline">
 					<input type="radio" class="form-check-input" name="genderInputRadioGroup" 
-							id="femaleGenderInput" value="FEMALE">
-					<label class="form-check-label" for="femaleGenderInput">Ženski</label>
+						id="femaleGenderInput" value="FEMALE">
+					<label class="form-check-label" for="femaleGenderInput">Ženski pol</label>
 				</div>
 			</div>
 			<div class="form-group">
