style: show user's role as a combo-box

--- a/FitPass/WebContent/index.html
+++ b/FitPass/WebContent/index.html
@@ -27,8 +27,8 @@
 					</li>
 				</ul>
 				<button type="button" class="btn bg-dark text-white" id="registrationAsABuyerButton">Registruj se</button>
-				<button type="button" class="btn bg-dark text-white" id="loginButton" hidden="true">Prijavi se</button>
-				<button type="button" class="btn bg-dark text-white" id="logoutButton" hidden="true">Odjavi se</button>
+				<button type="button" class="btn bg-dark text-white" id="loginButton" hidden>Prijavi se</button>
+				<button type="button" class="btn bg-dark text-white" id="logoutButton" hidden>Odjavi se</button>
 			</div>
 		</div>
 	</nav>
