--- a/FitPass/WebContent/registration.html
+++ b/FitPass/WebContent/registration.html
@@ -26,8 +26,8 @@
 						<a class="nav-link" href="index.html">Početna stranica</a>
 					</li>
 				</ul>
-				<button type="button" class="btn bg-dark text-white" id="loginButton" hidden="true">Prijavi se</button>
-				<button type="button" class="btn bg-dark text-white" id="logoutButton" hidden="true">Odjavi se</button>
+				<button type="button" class="btn bg-dark text-white" id="loginButton" hidden>Prijavi se</button>
+				<button type="button" class="btn bg-dark text-white" id="logoutButton" hidden>Odjavi se</button>
 			</div>
 		</div>
 	</nav>
