--- a/FitPass/WebContent/user-profile.html
+++ b/FitPass/WebContent/user-profile.html
@@ -41,7 +41,7 @@
         <form role="form" id="userDataForm">
             <div class="submitAndResetButtonsDiv">
                 <button type="submit" class="btn-default bg-primary text-white">Sačuvaj promene</button>
-                <button type="reset" class="btn-default bg-warn text-white" disabled="true">Poništi promene</button>
+                <button type="reset" class="btn-default bg-warn text-white" disabled>Poništi promene</button>
             </div>
             <div class="form-group">
                 <label for="usernameInput">Korisničko ime:</label>
@@ -77,7 +77,12 @@
             </div>
             <div class="form-group">
                 <label for="roleInput">Uloga:</label>
-                <input type="text" class="form-control" id="roleInput" disabled="true">
+                <select class="form-select" id="roleSelect" disabled>
+                    <option value="ADMINISTRATOR">Administrator</option>
+                    <option value="VENUE_MANAGER">Menadžer objekta</option>
+                    <option value="TRAINER">Trener</option>
+                    <option value="BUYER">Kupac</option>
+                </select>
             </div>
         </form>
     </div>
