style: add header above login & registration forms

--- a/FitPass/WebContent/login.html
+++ b/FitPass/WebContent/login.html
@@ -30,7 +30,8 @@
 			</div>
 		</div>
 	</nav>
-	<div class="container d-flex max-vw-50 min-vh-100">
+	<div class="container d-flex flex-column">
+		<h1>Prijava korisnika</h1>
 		<form role="form" id="loginForm">
 			<div class="form-group">
 				<label for="usernameInput">Korisničko ime:</label>
@@ -41,7 +42,7 @@
 				<input type="password" class="form-control" id="passwordInput">
 			</div>
 			<div class="submitButtonDiv">
-				<button type="submit" class="btn-default bg-primary text-white">Prijava</button>
+				<button type="submit" class="btn-default bg-primary text-white">Prijavi se</button>
 			</div>
 		</form>
 	</div>
