--- a/FitPass/WebContent/registration.html
+++ b/FitPass/WebContent/registration.html
@@ -31,7 +31,8 @@
 			</div>
 		</div>
 	</nav>
-	<div class="container d-flex max-vw-50 min-vh-100">
+	<div class="container d-flex flex-column">
+		<h1>Registracija kao kupac</h1>
 		<form role="form" id="registrationForm">
 			<div class="form-group">
 				<label for="usernameInput">Korisničko ime:</label>
