feat: write on-click actions for editing buttons

--- a/FitPass/WebContent/user-profile.html
+++ b/FitPass/WebContent/user-profile.html
@@ -40,8 +40,8 @@
 	<div class="container d-flex">
         <form role="form" id="userDataForm">
             <div class="submitAndResetButtonsDiv">
-                <button type="submit" class="btn-default bg-primary text-white">Sačuvaj promene</button>
-                <button type="reset" class="btn-default bg-warn text-white" disabled>Poništi promene</button>
+                <button type="submit" class="btn-default bg-primary text-white" disabled>Sačuvaj promene</button>
+                <button type="reset" class="btn-default bg-danger text-white" disabled>Poništi promene</button>
             </div>
             <div class="form-group">
                 <label for="usernameInput">Korisničko ime:</label>
