--- a/FitPass/WebContent/registration.html
+++ b/FitPass/WebContent/registration.html
@@ -25,6 +25,12 @@
 					<li class="nav-item">
 						<a class="nav-link" href="index.html">Početna stranica</a>
 					</li>
+					<li class="nav-item dropdown navbarContentForAuthenticatedUsers" hidden>
+						<a class="nav-link dropdown-toggle" href="#" id="profileDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Profil</a>
+						<ul class="dropdown-menu" aria-labelledby="profileDropdown">
+							<li><a class="dropdown-item" href="user-profile.html">Moj profil</a></li>
+						</ul>
+					</li>
 				</ul>
 				<button type="button" class="btn bg-dark text-white" id="loginButton" hidden>Prijavi se</button>
 				<button type="button" class="btn bg-dark text-white" id="logoutButton" hidden>Odjavi se</button>
