--- a/FitPass/WebContent/registration.html
+++ b/FitPass/WebContent/registration.html
@@ -29,6 +29,9 @@
 						<a class="nav-link dropdown-toggle" href="#" id="profileDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Profil</a>
 						<ul class="dropdown-menu" aria-labelledby="profileDropdown">
 							<li><a class="dropdown-item" href="user-profile.html">Moj profil</a></li>
+							<li class="navbarContentForAdministrators" hidden>
+								<a class="dropdown-item" href="users-overview.html">Pregled svih korisnika</a>
+							</li>
 						</ul>
 					</li>
 				</ul>
