--- a/FitPass/WebContent/user-profile.html
+++ b/FitPass/WebContent/user-profile.html
@@ -25,10 +25,13 @@
 					<li class="nav-item">
 						<a class="nav-link" href="index.html">Početna stranica</a>
 					</li>
-                    <li class="nav-item dropdown">
+                    <li class="nav-item dropdown navbarContentForAuthenticatedUsers" hidden>
                         <a class="nav-link dropdown-toggle" href="#" id="profileDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Profil</a>
                         <ul class="dropdown-menu" aria-labelledby="profileDropdown">
                             <li><a class="dropdown-item" href="#">Moj profil</a></li>
+                            <li class="navbarContentForAdministrators" hidden>
+                                <a class="dropdown-item" href="users-overview.html">Pregled svih korisnika</a>
+                            </li>
                         </ul>
                     </li>
 				</ul>
