--- a/FitPass/WebContent/my-profile.html
+++ b/FitPass/WebContent/my-profile.html
@@ -4,11 +4,11 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/user-profile.css">
+	<link rel="stylesheet" type="text/css" href="css/my-profile.css">
 	<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="bootstrap/js/bootstrap.bundle.min.js"></script>
 	<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
-	<script type="text/javascript" src="js/user-profile.js"></script>
+	<script type="text/javascript" src="js/my-profile.js"></script>
 	<title>Moj profil</title>
 </head>
 <body class="text-bg-dark">
