--- a/FitPass/WebContent/index.html
+++ b/FitPass/WebContent/index.html
@@ -28,7 +28,7 @@
 					<li class="nav-item dropdown navbarContentForAuthenticatedUsers" hidden>
 						<a class="nav-link dropdown-toggle" href="#" id="profileDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Profil</a>
 						<ul class="dropdown-menu" aria-labelledby="profileDropdown">
-							<li><a class="dropdown-item" href="user-profile.html">Moj profil</a></li>
+							<li><a class="dropdown-item" href="my-profile.html">Moj profil</a></li>
 							<li class="navbarContentForAdministrators" hidden>
 								<a class="dropdown-item" href="users-overview.html">Pregled svih korisnika</a>
 							</li>
